--- a/index.html
+++ b/index.html
@@ -103,6 +103,19 @@
             </div>
 
             <div class="formRow">
+               <label for="dish">What's your favorite dish?</label>
+               <input type="text" name="favDish" id="dish" list="dishType" />
+               <datalist id="dishType">
+                  <option value="Anitpasto Pizza" />
+                  <option value="Big Kahuna Pizza" />
+                  <option value="BBQ Chicken Pizza" />
+                  <option value="Mediterranean Herb Pizza" />
+                  <option value="Pasta Rolls" />
+                  <option value="Pesto Artichoke Pizza" />
+               </datalist>
+            </div>
+
+            <div class="formRow">
                <label for="dineSpin">How many times do you dine out per month?</label>
                <input type="number" name="dineOut" id="dineSpin" value="1" step="1" min="0" max="20" />
             </div>
@@ -160,6 +173,13 @@
                </fieldset>
             </div>
 
+            <div class="formRow">
+               <label for="rangeBox">Rate the overall service<br />
+                  (0=poor; 10=great) </label>
+               0
+               <input type="range" name="serviceRate" id="rangeBox" value="5" step="1" min="0" max="10" />
+               10
+            </div>
 
             <label for="commBox">Tell us more about your experience!</label>
             <textarea name="custExp" id="commBox"></textarea>
