--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <legend>Customer Information</legend>
             <div class="formRow">
                <label for="name">Name*</label>
-               <input name="custName" id="name" type="text" placeholder="first and last name" />
+               <input name="custName" id="name" type="text" placeholder="first and last name" required />
             </div>
 
             <div class="formRow"><label for="street">Street Address</label>
@@ -79,15 +79,15 @@
             </div>
 
             <div class="formRow"><label for="zip">Postal Code</label>
-               <input name="custZip" id="zip" type="text" placeholder="nnnnn (-nnnn)" />
+               <input name="custZip" id="zip" type="text" placeholder="nnnnn (-nnnn)" pattern="^\d{5}(-\d{4})?$" />
             </div>
 
             <div class="formRow"><label for="phone">Phone Number</label>
-               <input name="custPhone" id="phone" type="text" placeholder="(nnn) nnn-nnnn" />
+               <input name="custPhone" id="phone" type="tel" placeholder="(nnn) nnn-nnnn" pattern="^\d{10}$|^(\(\d{3}\)\s*)?\d{3}[\s-]?\d{4}$" />
             </div>
 
             <div class="formRow"><label for="email">E-mail*</label>
-               <input name="custEmail" id="email" type="text" />
+               <input name="custEmail" id="email" type="email" required />
             </div>
 
 
@@ -184,6 +184,12 @@
             <label for="commBox">Tell us more about your experience!</label>
             <textarea name="custExp" id="commBox"></textarea>
          </fieldset>
+
+         <div id="buttons">
+            <input type="submit" value="Submit My Survey" />
+            <input type="reset" value="Cancel" />
+         </div>
+
       </form>
 
    </section>
