--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </nav>
    </header>
    <section>
-      <h1>Customer Survey</h1>
+      <h1>it is Survey</h1>
       <p>Thank you for taking our customer survey. Your response
          helps Red Ball Pizza maintain the tradition that has made
          us the top-rated pizzeria in the metro area.
